Homepage: Fixed messages not showing correctly. Panel: Added removing animation

--- a/Assets/Styling/panel.scss
+++ b/Assets/Styling/panel.scss
@@ -53,6 +53,7 @@
         grid-template-columns: 1fr 1fr 1fr 2.3fr 1fr;
         height: fit-content;
         column-gap: 0.3em;
+        transition: opacity 300ms 60ms, transform 300ms;
 
         * {
             flex: 1;
@@ -88,6 +89,11 @@
             * {
                 border: none;
             }
+        }
+
+        &.removed {
+            transform: translateY(90%);
+            opacity: 0;
         }
 
         .delete.button {
